--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 中国-164.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.84MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-3.65MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-4.11MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.65MB/s(Youtube:不良林), server: 43.154.235.119, port: 10064, type: vmess, uuid: 8b115f89-27cc-4ea9-85af-dda2de597928, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.27MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-411.0KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇨🇳 中国-3.79MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-219.8KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-173.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.85MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇨🇦 加拿大-1.03MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-1.79MB/s(Youtube:不良林), server: sgg.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: sgg.2046.gq, skip-cert-verify: true}
   - {name: 🇯🇵 日本-1.43MB/s(Youtube:不良林), server: 203.138.98.199, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-219.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-219.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-219.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
@@ -66,19 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.65MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-219.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
@@ -88,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-219.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
@@ -104,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-219.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
@@ -129,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-219.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
