--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.27MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-411.0KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇨🇳 中国-3.79MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-219.8KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-173.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.85MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇦 加拿大-1.03MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.79MB/s(Youtube:不良林), server: sgg.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: sgg.2046.gq, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.43MB/s(Youtube:不良林), server: 203.138.98.199, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-6.85MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.74MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-1.21MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-297.0KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇨🇳 中国-3.18MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.53MB/s(Youtube:不良林), server: 43.129.30.122, port: 15256, type: vmess, uuid: 02ee559e-a1aa-427e-e42b-f97977795dbc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.86MB/s(Youtube:不良林), server: 43.129.30.122, port: 42567, type: vmess, uuid: 7744b0d0-3cae-4ba4-d44d-2a2869ef4eea, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.79MB/s(Youtube:不良林), server: 43.129.30.122, port: 12359, type: vmess, uuid: f78921c4-5a97-47ed-db4c-e88b799e6581, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: 167.88.62.68, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-219.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.74MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-219.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.74MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-219.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.74MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.79MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-219.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.74MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-219.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.74MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-219.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.74MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-219.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.74MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
