--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,69 +5,67 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.85MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.74MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-1.21MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-297.0KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇨🇳 中国-3.18MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.53MB/s(Youtube:不良林), server: 43.129.30.122, port: 15256, type: vmess, uuid: 02ee559e-a1aa-427e-e42b-f97977795dbc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.86MB/s(Youtube:不良林), server: 43.129.30.122, port: 42567, type: vmess, uuid: 7744b0d0-3cae-4ba4-d44d-2a2869ef4eea, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 167.88.62.68, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇭🇰 香港-1.79MB/s(Youtube:不良林), server: 43.129.30.122, port: 12359, type: vmess, uuid: f78921c4-5a97-47ed-db4c-e88b799e6581, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: 167.88.62.68, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇻🇳 越南-1.21MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.77MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-188.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.90MB/s(Youtube:不良林), server: 192.74.242.182, port: 443, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/170419111021, ws-headers: {Host: 192.74.242.182}}
+  - {name: 🇺🇸 美国-2.78MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss2.2046.gq, skip-cert-verify: true}
+  - {name: 捷克-461.7KB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇺🇸 美国-407.5KB/s(Youtube:不良林), server: ss.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss.2046.gq, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.19MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.74MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 捷克-461.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.74MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 捷克-461.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.74MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 捷克-461.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.86MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.79MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -75,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.74MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 捷克-461.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.74MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 捷克-461.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.74MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 捷克-461.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.74MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 捷克-461.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
